[tool.poetry]
name = "homehuntr"
version = "0.1.0"
description = ""
authors = ["jeffbrennan <jeffbrennan10@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
polars = "^0.19.19"
pyspark = "^3.5.0"
delta-spark = "3.0.0"
lxml = "^4.9.3"
deltalake = "^0.14.0"
dash = "^2.14.2"
nbformat = "^5.9.2"
gcloud = "^0.18.3"
google-cloud-storage = "^2.14.0"
gcsfs = "^2023.12.2.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
